--- a/example.cabal
+++ b/example.cabal
@@ -17,7 +17,8 @@ library
   ghc-options:      -Wall
   hs-source-dirs: src/
   exposed-modules:
-    Todo
+    Todo.API
+    Todo.Server
   build-depends:  base
                 , aeson
                 , aeson-pretty
@@ -29,6 +30,7 @@ library
                 , swagger2
                 , text
                 , time
+                , stm
   default-language: Haskell2010
 
 executable example-server
@@ -39,6 +41,7 @@ executable example-server
                 , example
                 , servant-server
                 , warp
+                , stm
   default-language: Haskell2010
 
 test-suite swagger-server-spec
