--- a/example.cabal
+++ b/example.cabal
@@ -27,6 +27,7 @@ library
                 , servant
                 , servant-server
                 , servant-swagger
+                , servant-swagger-ui
                 , swagger2
                 , text
                 , time
